sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:3: error: not found: value len
  len = getNombreValeurs()
  ^AlgBubbleSort2:5: error: not found: value len
  for (i<-1 to len-nbParcours-2) {
               ^